# sparse_kernel_sampling

./: CMakeLists.txt  gen_two_moons.py  test.py
src/: Abalone.cpp  Abalone.hpp  CMakeLists.txt  Data.h  Data.hpp  MNIST.cpp  MNIST.h  MNIST.hpp  MNIST_mmap.cpp  MNIST_mmap.hpp  Nystrom.cpp  Nystrom.hpp  RuntimeMonitor.cpp  RuntimeMonitor.hpp  TwoMoons.cpp  TwoMoons.hpp  main.cpp  oASIS.cpp  oASIS.h
src/MDS/: CMakeLists.txt  MDS.cpp  MDS.hpp
src/data/: Abalone.cpp  Abalone.hpp  CMakeLists.txt  Data.hpp  MNIST.cpp  MNIST.hpp  TwoMoons.cpp  TwoMoons.hpp
src/sampling/: CMakeLists.txt  Nystrom.cpp  Nystrom.hpp  oASIS.cpp  oASIS.h
src/utility/: Arguments.cpp  Arguments.hpp  CMakeLists.txt  PseudoInv.cpp  PseudoInv.hpp  RuntimeMonitor.cpp  RuntimeMonitor.hpp  mymath.hpp
